Fixed Title text alignment to center at mobile screen size.

--- a/css/styles.css
+++ b/css/styles.css
@@ -161,7 +161,7 @@ h1, h2, h3, h4, h5, h6{
 
 /* Media Queries */
 @media (max-width: 1028px) {
-  #title{
+  #title .container-fluid{
     text-align: center;
   }
   .title-image{
